adiciono o arquivo .gitignore modifico os arquivos index.html e style.css

--- a/index.html
+++ b/index.html
@@ -11,5 +11,11 @@
     <h1>Git Ignore</h1>
 
     <p>É um arquivo usado para ignorar o versonamento de outros arquivos e pastas que não queremos subir para o <strong>GitHub</strong></p>
+
+    <h2>Como criar</h2>
+
+    <p>É só criar um arquivo com o nome de <strong>.gitignore</strong> na raiz do projeto</p>
+
+    <p>Todos os nomes de arquivos ou pastas colocados nesse arquivo <strong>.gitignore</strong> não serão versionados no <strong>GitHub</strong>.</p>
 </body>
 </html>
